# volumes-docker

./: .env.example  .gitignore  DESCRIPTION  DESCRIPTION.txt  Dockerfile  Makefile  README.md  config.mk  dockerfile_original  env.example  pyproject.toml  requirements.in  requirements.txt  requirements_.txtR  requirements_R.txt
.github/workflows/: publish_image.yaml  update-versions.yaml
scripts/: config.py  docker_build.py  docker_build_push.py  docker_push.py  pacotes_check_version.py  validate_config.py  validate_docker.py
texmf/doc/latex/booktabs/: README  booktabs.dvi
texmf/doc/latex/colortbl/: colortbl.dvi
texmf/doc/latex/koma-script/: README  manifest.txt
texmf/doc/latex/textpos/: README
texmf/source/: arial-src.cab  booktabs-src.cab  capt-of-src.tar.bz2  colortbl-src.tar.bz2  eso-pic-src.tar.bz2  fancyhdr-src.tar.xz  l3kernel-src.tar.xz  l3packages-src.tar.xz  ms-src.tar.bz2  pdfpages-src.tar.xz  textpos-src.tar.bz2  tocloft-src.tar.bz2
texmf/tex/latex/babel-french/: frenchb.ldf  frenchb.lua
texmf/tex/latex/graphics/: graphics.sty  rotating.sty
texmf/tex/latex/l3kernel/: expl3-code.tex  expl3-generic.tex  expl3.sty  l3basics.sty  l3bootstrap.sty  l3box.sty  l3candidates.sty  l3clist.sty  l3coffins.sty  l3color.sty  l3doc.cls  l3docstrip.tex  l3dvipdfmx.def  l3dvips.def  l3dvisvgm.def  l3expan.sty  l3file.sty  l3fp.sty  l3int.sty  l3keys.sty  l3msg.sty  l3names.sty  l3pdfmode.def  l3prg.sty  l3prop.sty  l3quark.sty  l3seq.sty  l3skip.sty  l3sort.sty  l3str.sty  l3tl.sty  l3token.sty  l3xdvipdfmx.def
texmf/tex/latex/multirow/: bigdelim.sty  (+2 more)
(+16 files in other folders)
